# predidx

./: .dockerignore  .gitignore  Darwin.def  Dockerfile  Linux.def  Makefile  Makefile.in  README.md  configure.ac  docker.sh  shell.nix  test++
.github/workflows/: make-swi.yml
src/: config.h.in  predidx-c.c  predidx-c.h  predidx-cpp.cpp  predidx.pl  predidx.qlf  swi-predidx-c.c
test/: t1.pl  t2.pl  t3.pl  test.cpp
